--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
             }
         }
 		function come(){
-			window.location.href = "index.html";  // 替换成目标页面的路径
+			window.location.href = "LOVE.html";  // 替换成目标页面的路径
 		}
 
         // 初次加载时显示时间
