--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
             }
         }
 		function come(){
-			window.location.href = "LOVE.html";  // 替换成目标页面的路径
+			window.location.href = "navigation bar(right).html";  // 替换成目标页面的路径
 		}
 
         // 初次加载时显示时间
